--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Freaky a Personal Category Bootstrap Responsive Website Template | Home :: W3layouts</title>
+  <title>Alex Turner Personal Website</title>
   <!-- Template CSS -->
   <link rel="stylesheet" href="assets/css/style-starter.css">
   <!-- Template CSS -->
@@ -26,7 +26,7 @@
       <header id="site-header" class="header-top">
         <nav class="navbar navbar-expand-lg shift " id="header">
           <a class="navbar-brand" href="index.html">
-            Freaky<span class="dot-1">.</span>
+            Writer<span class="dot-1">.</span>
           </a>
           <button class="navbar-toggler bg-gradient" type="button" data-toggle="collapse"
             data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
