Changed edge of nav tab and edited page conection

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
     <header id="site-header" class="header-top">
       <nav class="navbar navbar-expand-lg shift " id="header">
         <a class="navbar-brand" href="index.html">
-          Writer<span class="dot-1">.</span>
+          Writer<span class="dot-1"></span>
         </a>
         <button class="navbar-toggler bg-gradient" type="button" data-toggle="collapse"
           data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
@@ -200,7 +200,7 @@
                     <ul class="footer-gd-16">
                         <li><a href="#">Terms</a></li>
                         <li><a href="#">Support</a></li>
-                        <li><a href="#">Privacy</a></li>
+                        <li><a href="services.html">Services</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                     <div class="share-icons-footer ml-lg-4">
