--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <header id="site-header" class="header-top">
         <nav class="navbar navbar-expand-lg shift " id="header">
           <a class="navbar-brand" href="index.html">
-            Writer<span class="dot-1">.</span>
+            Writer<span class="dot-1"></span>
           </a>
           <button class="navbar-toggler bg-gradient" type="button" data-toggle="collapse"
             data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
@@ -39,14 +39,17 @@
                 <a class="nav-link" href="#site-header">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link effect-3" href="about.html">About</a>
+                <a class="nav-link effect-3" href="#about">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link effect-3" href="services.html">Services</a>
+                <a class="nav-link effect-3" href="#services">Services</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link effect-3" href="#works">Works</a>
               </li>
              
               <li class="nav-item">
-                <a class="nav-link effect-3" href="contact.html">Contact</a>
+                <a class="nav-link effect-3" href="#client">Clients</a>
               </li>
             </ul>
 
@@ -104,6 +107,16 @@
 					</div>
 				</div>
 			</div>
+    </div>
+  </div>
+</section>
+
+
+<section class="w3l-content-w-photo-6 bg-light" id="services">
+  <div class="content-photo-info py-5">
+		<div class="container py-lg-3">
+      <h3 class="hny-title two text-dark">
+        Services<span class="dot-1">.</span></h3>
 			<!-- //row-->
 			<!-- /row-->
 			<div class="about-content-grids row py-lg-5 py-4 mt-lg-5 mt-4">
@@ -128,8 +141,14 @@
 						<span class="fa fa-copy icon-fea1" aria-hidden="true"></span>
 						<h5><a>Copywriting</a></h5>
 						<p> Need persuasive product descriptions or attention-grabbing ad copy? I can handle that too!</p>
-
+            <div class="read-more mt-lg-5 mt-4">
+              <a href="services.html" class="read-more">
+                <span class="more_icon fa fa-long-arrow-right"></span>
+                <span class="more_text">Read More</span>
+              </a>
+            </div>
 					</div>
+          
 				</div>
 
 			</div>
@@ -143,7 +162,7 @@
 
 <!-- //Portfolio -->
 <!-- blog with slider -->
-<section class="blog-slider">
+<section class="blog-slider" id="works">
     <div class="blog-slider-inner py-5">
         <div class="container py-lg-5">
             <h3 class="hny-title two">
@@ -195,7 +214,7 @@
     </div>
 </section>
 <!-- //blog with slider -->
-<section class="w3l-customers-6">
+<section class="w3l-customers-6" id="client">
 	<!--/customers -->
 	<div class="customers-6-infhny py-5">
 		<div class="container py-lg-5">
@@ -265,7 +284,7 @@
     	<div class="download-content text-center">
     		<div class="layer-2 py-5">
     			<div class="container py-lg-3">
-    				<h3 class="hny-title two">Do you like my work<span class="dot-1">.</span>?</h3>
+    				<h3 class="hny-title two">Do you like my work<span class="dot-1">?</span></h3>
     				<h6>Let’s work together!</h6>
     				<div class="read-more mt-lg-5 mt-4">
     					<a href="contact.html" class="read-more">
@@ -294,7 +313,7 @@
                     <ul class="footer-gd-16">
                         <li><a href="#">Terms</a></li>
                         <li><a href="#">Support</a></li>
-                        <li><a href="#">Privacy</a></li>
+                        <li><a href="services.html">Services</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                     <div class="share-icons-footer ml-lg-4">
