Navbar animation changed and scroll bug removed

--- a/contact.html
+++ b/contact.html
@@ -33,15 +33,20 @@
               <li class="nav-item">
                 <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link effect-3" href="about.html">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link effect-3" href="services.html">Services</a>
-              </li>
-             <li class="nav-item active">
-                <a class="nav-link effect-3" href="contact.html">Contact</a>
-              </li>
+            
+							<li class="nav-item">
+								<a class="nav-link effect-3" href="index.html#about">About</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link effect-3" href="index.html#services">Services</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link effect-3" href="index.html#works">Works</a>
+							  </li>
+							 
+							  <li class="nav-item">
+								<a class="nav-link effect-3" href="index.html#client">Clients</a>
+							  </li>
             </ul>
 
           </div>
@@ -170,13 +175,13 @@
 </html>
 <script src="assets/js/jquery-3.3.1.min.js"></script>
 <!-- disable body scroll which navbar is in active -->
-<script>
+<!-- <script>
   $(function () {
     $('.navbar-toggler').click(function () {
       $('body').toggleClass('noscroll');
     })
   });
-</script>
+</script> -->
 <!--/MENU-JS-->
 <script>
   $(window).on("scroll", function () {
