--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
   <link rel="icon" type="image/x-icon" href="assets/images/img2.png">
-  
-  
+
 </head>
 <body>
   <!-- /Homepage-->
@@ -36,10 +35,10 @@
           <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="#site-header">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link " href="#site-header">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link effect-3" href="#about">About</a>
+                <a class="nav-link " href="#about">About</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link effect-3" href="#services">Services</a>
@@ -89,7 +88,7 @@
 		<div class="container py-lg-3">
 			<!-- /row-->
 			<div class="content-photo-grids row mt-lg-5 mt-4">
-				<div class="photo-6-inf-left col-lg-6 pr-lg-4" style="padding-left: 6em;">
+				<div class="photo-6-inf-left col-lg-6 pr-lg-4" >
 					<img src="assets/images/img4.png" class="img-fluid" alt="" >
 				</div>
 				<div class="photo-6-inf-right col-lg-6 text-left pl-lg-5">
@@ -368,12 +367,12 @@
 <!-- disable body scroll which navbar is in active -->
 
 <!--//-->
-<script>
+<!-- <script>
   $(function () {
     $('.navbar-toggler').click(function () {
       $('body').toggleClass('noscroll');
     })
-  });
+  }); -->
 </script>
 <!--/scroll-down-JS-->
 <script>
